--- a/Ink Canvas/Windows/SettingsViews/SettingsWindow.xaml
+++ b/Ink Canvas/Windows/SettingsViews/SettingsWindow.xaml
@@ -196,6 +196,13 @@
                 </DrawingGroup>
             </DrawingImage.Drawing>
         </DrawingImage>
+        <DrawingImage x:Key="UpdateCenterIcon">
+            <DrawingImage.Drawing>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="#FF222222" Geometry="F1 M16,16z M0,0z M8,0C3.58172,0 0,3.58172 0,8 0,12.4183 3.58172,16 8,16 12.4183,16 16,12.4183 16,8 16,3.58172 12.4183,0 8,0z M8,14C4.68629,14 2,11.3137 2,8 2,4.68629 4.68629,2 8,2 11.3137,2 14,4.68629 14,8 14,11.3137 11.3137,14 8,14z M8,4C5.79086,4 4,5.79086 4,8 4,10.2091 5.79086,12 8,12 10.2091,12 12,10.2091 12,8 12,5.79086 10.2091,4 8,4z M8,10C6.89543,10 6,9.10457 6,8 6,6.89543 6.89543,6 8,6 9.10457,6 10,6.89543 10,8 10,9.10457 9.10457,10 8,10z"/>
+                </DrawingGroup>
+            </DrawingImage.Drawing>
+        </DrawingImage>
         <DrawingImage x:Key="AboutIcon">
             <DrawingImage.Drawing>
                 <DrawingGroup ClipGeometry="M0,0 V16 H16 V0 H0 Z">
@@ -742,6 +749,11 @@
                         </ItemsControl>
                     </Grid>
                 </Border>
+                <!--UpdateCenterPanel-->
+                <Grid Margin="250,48,0,0" Visibility="Collapsed" Name="UpdateCenterPane">
+                    <settingsViews:UpdateCenterPanel x:Name="UpdateCenterPanel"/>
+                </Grid>
+
                 <!--AboutPanel-->
                 <Grid Margin="250,48,0,0" Visibility="Collapsed" Name="AboutPane">
                     <settingsViews:AboutPanel x:Name="SettingsAboutPanel"/>
