--- a/Ink Canvas/MainWindow.xaml
+++ b/Ink Canvas/MainWindow.xaml
@@ -2572,7 +2572,7 @@
                                                          IsOn="True" FontFamily="Microsoft YaHei UI" FontWeight="Bold" />
                                     </ui:SimpleStackPanel>
                                     <TextBlock TextWrapping="Wrap" Foreground="#a1a1aa"
-                                               Text="# 避免画布全屏，会导致左侧或顶部有AppBar（Dock栏软件）时导致浮动工具栏偏移，重启icc后生效。" />
+                                               Text="# 避免画布全屏，应该可解决任务栏非置顶和Win11任务栏无法点击的问题，会导致左侧或顶部有AppBar（Dock栏软件）时导致浮动工具栏偏移，重启icc后生效。" />
                                     <ui:SimpleStackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                                     
                                         <TextBlock Foreground="#fafafa" Text="启用EdgeGestureUtil"
