--- a/Ink Canvas/MainWindow.xaml
+++ b/Ink Canvas/MainWindow.xaml
@@ -7502,7 +7502,7 @@
 
         <Grid Name="FloatingbarUIForInkReplay">
             <Viewbox Name="ViewboxFloatingBar" Margin="100,5,0,0" Cursor="Arrow"
-                     HorizontalAlignment="Left" Height="58" VerticalAlignment="Top" MinWidth="200" MaxWidth="1200"
+                     HorizontalAlignment="Left" Height="58" VerticalAlignment="Top" Width="1200"
                      RenderTransformOrigin="0.5,0.5">
                 <Viewbox.LayoutTransform>
                     <ScaleTransform x:Name="ViewboxFloatingBarScaleTransform" ScaleX="1" ScaleY="1" />
