add:双联动架构

--- a/Ink Canvas/MainWindow.xaml
+++ b/Ink Canvas/MainWindow.xaml
@@ -1465,7 +1465,7 @@
                                     <ui:SimpleStackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                                         <Image Source="/Resources/Icons-png/Powerpoint.png" Margin="0,0,6,0" Width="28"
                                                Height="28" VerticalAlignment="Center" />
-                                        <TextBlock Foreground="#fafafa" Text="使用 ROT 联动（关闭为默认 COM 联动）" VerticalAlignment="Center"
+                                        <TextBlock Foreground="#fafafa" Text="使用 ROT 联动（需要重启）" VerticalAlignment="Center"
                                                    FontSize="14" Margin="0,0,16,0" />
                                         <ui:ToggleSwitch OnContent="" OffContent="" Name="ToggleSwitchUseRotPptLink"
                                                          IsOn="False" FontFamily="Microsoft YaHei UI" FontWeight="Bold"
